--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,22 @@ font-family: 'Roboto', sans-serif; */
     background-image: linear-gradient(to right, rgb(39, 39, 39), rgb(97, 97, 97));
 }
 
+.ui-menu-color-home{
+    background-color: rgb(165, 7, 86);
+}
+
+.ui-menu-color-resume{
+    background-color: rgb(5, 126, 95);
+}
+
+.ui-menu-color-contact{
+    background-color: rgb(34, 76, 138);
+}
+
+.ui-menu-color-cv{
+    background-color: rgb(85, 44, 119);
+}
+
 /*--------------------Heading-------------------------*/
 header{
     margin: 0px;
@@ -44,3 +60,97 @@ header{
     margin-bottom: 90px;
     color: white;
 }
+
+.list-inline-item:not(:last-child) {
+    margin: 0px;
+}
+
+.menu-container{
+    font-size: 0px;
+}
+
+#nav{
+    margin: 0px;
+}
+
+#nav li{
+    font-size: 14px;
+    padding: 0px;
+}
+
+.menu-item{
+    height: 120px;
+    text-align: center;
+    padding: 0px;
+}
+
+.menu-item a{
+    width: 100%;
+    text-decoration: none;
+    color: white;
+    height: 120px;
+}
+
+.menu-item a i{
+    padding-top: 22px;
+    display: block;
+    color: rgb(214, 214, 214);
+    font-size: 26px;
+}
+
+.menu-item span{
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+
+
+
+
+/*-----------------------HOVER.CSS----------------------*/
+.hvr-sweep-to-bottom {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  .hvr-sweep-to-bottom:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #1414143d;
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transform-origin: 50% 0;
+    transform-origin: 50% 0;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-sweep-to-bottom:hover, .hvr-sweep-to-bottom:focus, .hvr-sweep-to-bottom:active {
+    color: white;
+  }
+  .hvr-sweep-to-bottom:hover:before, .hvr-sweep-to-bottom:focus:before, .hvr-sweep-to-bottom:active:before {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  
