--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ font-family: 'Roboto', sans-serif; */
 
 /*--------------------Colours-------------------------*/
 .bg-color-name-title{
-    background-image: linear-gradient(to right, rgb(39, 39, 39), rgb(97, 97, 97));
+    background-color: rgb(70, 70, 70);
 }
 
 .ui-menu-color-home{
@@ -25,7 +25,30 @@ font-family: 'Roboto', sans-serif; */
     background-color: rgb(85, 44, 119);
 }
 
-/*--------------------Heading-------------------------*/
+/*----------------Special paddings/margins/text-----------*/
+
+h1, 
+h2, 
+h3, 
+h4{
+    margin: 0px;
+}
+
+.uppercase{
+    text-transform: uppercase;
+}
+
+.general-sub{
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    color: rgb(200, 200, 200);
+}
+
+.inline-block{
+    display: inline-block;
+}
+
+/*--------------------Header-------------------------*/
 header{
     margin: 0px;
 }
@@ -35,13 +58,13 @@ header{
 }
 
 .logo{
-    background: url(../images/dee.jpg) no-repeat center center;
+    background: url(../images/dee.png) no-repeat center center;
     background-size: cover;
     min-height: 360px;
     filter: grayscale(100%);
-    transition: all 0.5 ease-in-out;
-    -moz-transition: all 0.5 ease-in-out;
-    -webkit-transition: all 0.5 ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
 }
 
 .name{
@@ -94,7 +117,7 @@ header{
 .menu-item a i{
     padding-top: 22px;
     display: block;
-    color: rgb(214, 214, 214);
+    color: rgb(200, 200, 200);
     font-size: 26px;
 }
 
@@ -107,11 +130,58 @@ header{
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
+    padding-bottom: 45px;
 }
 
 
 
+/*--------------------Footer-------------------------*/
+footer{
+    background-color: rgb(50, 50, 50);
+    min-height: 120px;
+    color: rgb(200, 200, 200);
+    text-align: center;
+}
 
+#footer-details{
+    padding: 20px;
+}
+
+.cv-pdf i{
+    font-size: 18px;
+    color: rgb(200, 200, 200);
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+.cv-pdf i:hover{
+    color: rgb(165, 7, 86);
+}
+
+.social-links{
+    padding-bottom: 15px;
+}
+
+.social-links li a i{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 25px;
+    line-height: 50px;
+    text-align: center;
+    color: rgb(200, 200, 200);
+    background-color: rgb(30, 30, 30);
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+.social-links li a i:hover{
+    background-color: rgb(165, 7, 86);
+}
 
 /*-----------------------HOVER.CSS----------------------*/
 .hvr-sweep-to-bottom {
