Link up pages in nav lists

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,9 @@ header{
     padding-bottom: 45px;
 }
 
+li #active{
+    color: black;
+}
 
 
 /*--------------------Footer-------------------------*/
