--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,14 @@ font-family: 'Roboto', sans-serif; */
     background-color: rgb(70, 70, 70);
 }
 
+.bg-color-three-reasons{
+    background-color: rgb(255, 255, 255);
+}
+
+.bg-color-personal-info{
+    background-color: rgb(200, 200, 200);
+}
+
 .ui-menu-color-home{
     background-color: rgb(165, 7, 86);
 }
@@ -46,6 +54,23 @@ h4{
 
 .inline-block{
     display: inline-block;
+}
+
+.row-table{
+    display: table;
+}
+
+.section-column{
+    display: table-cell;
+    padding: 0px 30px 30px;
+    float: none;
+}
+
+.section-heading{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 /*--------------------Header-------------------------*/
@@ -144,6 +169,7 @@ footer{
     min-height: 120px;
     color: rgb(200, 200, 200);
     text-align: center;
+    border-top: 5px solid black;
 }
 
 #footer-details{
@@ -185,6 +211,47 @@ footer{
 .social-links li a i:hover{
     background-color: rgb(165, 7, 86);
 }
+
+
+/*--------------------Three Reasons-------------------------*/
+.three-reasons-icon{
+    font-size: 26px;
+    color: rgb(165, 7, 86)
+}
+.three-reasons-heading{
+    margin-bottom: 15px;
+}
+
+/*-----------------Personal Info----------------------*/
+
+.personal-info-item{
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+.personal-info-item .key,
+.personal-info-item .value{
+    padding-right: 8px;
+    display: inline-block;
+}
+.personal-info-item .key p,
+.personal-info-item .value p{
+    margin: 0px;
+}
+.personal-info-item .key{
+    width: 30%;
+    margin-right: 25px;
+    padding-top: 5px;
+    vertical-align: top;
+}
+.personal-info-item .key p{
+    font-weight: 700;
+}
+.personal-info-item .value{
+    position: relative;
+    width: 60%;
+}
+
 
 /*-----------------------HOVER.CSS----------------------*/
 .hvr-sweep-to-bottom {
