Add some bottom margin to work and education history

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,9 @@ footer{
     margin-top: 40px;
 }
 
+.history-items{
+    margin-bottom: 30px;
+}
 .timeline-item{
     padding: 4em 2em 0em 2em;
     position: relative;
