Add 1px to right margin of body to fix gappy nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
 /* font-family: 'Lato', sans-serif;
 font-family: 'Roboto', sans-serif; */
 
+body{
+    margin-right: 1px;
+}
+
 
 /*--------------------Colours-------------------------*/
 .bg-color-name-title{
