--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,10 +117,10 @@ header{
 }
 
 .logo{
-    background: url(../images/dee.png) no-repeat center center;
+    background: url(../images/dee2.jpg) no-repeat center center;
     background-size: cover;
     min-height: 360px;
-    filter: grayscale(100%);
+    /*filter: grayscale(100%);*/
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -webkit-transition: all 0.5s ease-in-out;
@@ -141,6 +141,7 @@ header{
     margin-top: 20px;
     margin-bottom: 90px;
     color: white;
+    margin-left: 3px;
 }
 
 .list-inline-item:not(:last-child) {
@@ -174,23 +175,33 @@ header{
 }
 
 .menu-item a i{
-    padding-top: 22px;
+    padding-top: 35px;
     display: block;
     color: rgb(200, 200, 200);
-    font-size: 26px;
+    font-size: 20px;
 }
 
 .menu-item span{
     display: block;
     width: 100%;
-    padding-top: 5px;
+    padding-top: 10px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 10px;
     font-weight: 300;
     letter-spacing: 2px;
     padding-bottom: 45px;
 }
+.ui-menu-color-linkedin {
+    background-color: #0A66C2;
+}
+
+@media screen and (min-width: 1300px)  {
+    .menu-item span{
+        font-size: 14px;
+    }
+}
+
 
 li #active{
     color: black;
@@ -526,3 +537,28 @@ div#map {
         width: 90%;
     }
   }
+  @media screen and (max-width: 576px)  {
+    .name {
+        font-size: 2rem;
+        margin-top: 20px;
+    }
+    .title {
+        font-size: 1rem;
+        margin-bottom: 40px;
+        margin-top: 5px;
+    }
+    .menu-item{
+    height: 80px;
+}
+.menu-item a i{
+    padding-top: 15px;
+}
+
+.menu-item span{
+    padding-top: 10px;
+    padding-bottom: 45px;
+}
+.github-section {
+    font-size: 40%;
+}
+}
